Fix top of card shadow getting cut off

--- a/src/components/common/Card.scss
+++ b/src/components/common/Card.scss
@@ -1,5 +1,5 @@
 .card-container {
-  margin: 0 auto;
+  margin: 3px auto;
   box-shadow: 0 0 0 1px #d4d4d5, 0 2px 4px 0 rgba(34, 36, 38, 0.12),
     0 2px 10px 0 rgba(34, 36, 38, 0.15);
   border-radius: 0.3rem;
