--- a/src/components/common/Header.scss
+++ b/src/components/common/Header.scss
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 15px;
+  margin-bottom: 18px;
 
   .title-wrapper {
     margin: 0 auto;
